# wolf

./: .codeqlrc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: android.yml  codeql.yml  linux.yml  msvc.yml  osx.yml  wasm.yml
cmake/: common.cmake  test.cmake  vcpkg.cmake
docs/: quic.md
examples/: CMakeLists.txt
examples/gametime/: CMakeLists.txt  CustomRenderItem.cpp  CustomRenderItem.hpp  main.cpp  main.qml  q_custom_render_item.cpp  q_custom_render_item.hpp
queries:   exclude-paths:     - 'path/to/excluded/directory'     - 'path/to/excluded/: .codeqlrc
tests/: CMakeLists.txt  common.hpp  main.cpp
tests/media/: avframe.cpp  ffmpeg.cpp  image.cpp  openal.cpp
tests/ml/: w_image_processor_test.cpp  w_utilities_test.cpp
tests/ml/common_test_asset/nudity_detection/: .check_stream_to_avoid_nsfw_context
tests/ml/common_test_asset/utilities/: .get_env_vector_of_int
tests/stream/: CMakeLists.txt  ffmpeg_stream.cpp  grpc.cpp  quic.cpp  rist.cpp
tests/system/: CMakeLists.txt  compress.cpp  coroutine.cpp  dotenv.cpp  gamepad.cpp  gametime.cpp  log.cpp  lua.cpp  process.cpp  python.cpp  redis.cpp  signal_slot.cpp  tcp.cpp  trace.cpp  ws.cpp
wolf/: CMakeLists.txt  tests.cpp  wolf.cpp  wolf.hpp
wolf/cmake/: media.cmake  ml.cmake  stream.cmake  system.cmake  vcpkg.cmake
wolf/media/: CMakeLists.txt  w_image.hpp  w_image_data.hpp  w_openal.hpp
wolf/media/ffmpeg/: CMakeLists.txt  w_av_config.cpp  w_av_config.hpp  w_av_format.cpp  w_av_format.hpp  w_av_frame.cpp  w_av_frame.hpp  w_av_packet.hpp  w_decoder.hpp  w_encoder.hpp  w_ffmpeg.hpp  w_ffmpeg_ctx.hpp
wolf/media/gst/: CMakeLists.txt
wolf/media/gst/core/: w_message.hpp
wolf/media/openal/: CMakeLists.txt  w_openal.hpp
wolf/media/stb/: CMakeLists.txt  w_image.cpp  w_image.hpp  w_image_data.cpp  w_image_data.hpp
wolf/media/test/: avframe.hpp  ffmpeg.hpp  gstreamer.hpp  image.hpp  openal.hpp
wolf/media/tests/: CMakeLists.txt  avframe.cpp  ffmpeg.cpp  gstreamer.cpp  openal.cpp
wolf/ml/: CMakeLists.txt  w_common.hpp  w_read_video_frames.cpp  w_read_video_frames.hpp  w_utilities.cpp  w_utilities.hpp
wolf/ml/nudity_detection/: w_nudity_detection.cpp  w_nudity_detection.hpp
wolf/ml/referee_ocr/: w_image_processor.hpp  w_ocr_engine.cpp  w_ocr_engine.hpp  w_read_video_frames.hpp  w_referee.cpp  w_referee.hpp  w_soccer.cpp  w_soccer.hpp  w_utilities.hpp
wolf/ml/test/: w_nudity_detection_test.hpp  w_soccer_test.hpp  w_utilities_test.hpp
wolf/ml/test/common_test_asset/nudity_detection/: .check_stream_to_avoid_nsfw_context
wolf/ml/tests/: w_nudity_detection_test.cpp  w_ocr_engine_test.cpp  w_referee_test.cpp  w_soccer_test.cpp
wolf/stream/: CMakeLists.txt
wolf/stream/grpc/: CMakeLists.txt  w_grpc_client.hpp  w_grpc_server.hpp
wolf/stream/janus/: CMakeLists.txt  w_janus_api_emc.hpp
wolf/stream/quic/: CMakeLists.txt  w_quic.hpp  w_quic_client.hpp  w_quic_context.cpp  w_quic_context.hpp  w_quic_server.hpp
wolf/stream/quic/datatypes/: w_status.hpp
wolf/stream/quic/events/: w_connection_event.hpp  w_listener_event.hpp  w_stream_event.hpp
wolf/stream/quic/handles/: w_configuration.cpp  w_configuration.hpp  w_connection.cpp  w_connection.hpp  w_listener.cpp  w_listener.hpp  w_registration.cpp  w_registration.hpp  w_stream.cpp  w_stream.hpp
wolf/stream/rist/: CMakeLists.txt  w_rist.hpp  w_rist_data_block.hpp
wolf/stream/test/: ffmpeg_stream.hpp  grpc.hpp  quic.hpp  rist.hpp
wolf/stream/tests/: ffmpeg_stream.cpp
wolf/stream/webrtc/: CMakeLists.txt
wolf/system/: CMakeLists.txt  w_dotenv.cpp  w_dotenv.hpp  w_flags.cpp  w_gametime.hpp  w_leak_detector.cpp  w_leak_detector.hpp  w_overloaded.cpp  w_process.cpp  w_process.hpp  w_time.cpp  w_time.hpp  w_trace.cpp  w_trace.hpp
wolf/system/compression/: CMakeLists.txt  w_lz4.cpp  w_lz4.hpp  w_lzma.cpp  w_lzma.hpp
wolf/system/db/: CMakeLists.txt  w_postgresql.hpp  w_redis_client.cpp  w_redis_client.hpp
wolf/system/gamepad/: CMakeLists.txt  w_gamepad_client.hpp  w_gamepad_client_emc.cpp  w_gamepad_client_sdl.cpp  w_gamepad_virtual.hpp  w_gamepad_virtual_bus.hpp  w_gamepad_virtual_pool.cpp  w_gamepad_virtual_pool.hpp
wolf/system/log/: CMakeLists.txt  w_log.hpp  w_log_config.hpp
wolf/system/script/: CMakeLists.txt  w_lua.hpp  w_python.cpp  w_python.hpp
wolf/system/socket/: CMakeLists.txt  w_socket_options.hpp  w_tcp_client.cpp  w_tcp_client.hpp  w_tcp_server.cpp  w_tcp_server.hpp  w_ws_client.hpp  w_ws_client_emc.hpp  w_ws_server.hpp
wolf/system/test/: compress.hpp  coroutine.hpp  gamepad.hpp  gametime.hpp  log.hpp  postgresql.hpp  process.hpp  redis.hpp  signal_slot.hpp  tcp.hpp  trace.hpp  ws.hpp
wolf/system/tests/: CMakeLists.txt  compress.cpp  coroutine.cpp  gamepad.cpp  gametime.cpp  log.cpp  postgresql.cpp  process.cpp  python.cpp  redis.cpp  signal_slot.cpp  trace.cpp  ws.cpp
wolf_demo/wasm/: wolf.cpp
wolf_demo/wasm/www/: wolf.js
